tests/neg/i4368-70.scala
object i4370 {
  class Foo { type R = A }
  type A = List[Foo#R] // error: cyclic
}
